--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,9 @@
+<h2>My Heroes</h2>
+<ul class="heroes">
+    <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </li>
+</ul>    
 
 <div>
     <label>name:
@@ -5,7 +11,8 @@
     </label>    
 </div>    
 
-
-<h2>{{hero.name|uppercase}} Details</h2>
-<div><span>Id:</span>{{hero.id}}</div>
-<div><span>Name:</span>{{hero.name}}</div>
+<div *ngIf="selectedHero">
+    <h2>{{selectedHero.name|uppercase}} Details</h2>
+    <div><span>Id:</span>{{selectedHero.id}}</div>
+    <div><span>Name:</span>{{selectedHero.name}}</div>
+</div>
